--- a/styles.css
+++ b/styles.css
@@ -5,14 +5,19 @@
 }
 
 body {
+    
     font-family: Arial, Helvetica, sans-serif;
-    background-color: rgb(127, 198, 245);
+    background-image: url("https://wallpaperaccess.com/full/555756.jpg");
+    background-size: cover;
+    background-position: center;
+    margin: 0;
+    padding: 0;
+    background-repeat: no-repeat;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
 }
-
 .container {
     background-color: rgb(150, 219, 243);
     padding: 40px;
@@ -58,8 +63,8 @@ button {
 }
 
 .pokemon-info img {
-    width: 100px;
-    height: 100px;
+    width: 150px;
+    height: 150px;
     object-fit: cover;
     border-radius: 50%;
     margin-bottom: 15px;
